--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   </head>
   <body>
-    <input type="password" id="pass" />
+    <input type="password" id="pass" placeholder="Password"/>
     <button onclick="changeVisibility()">Change Visibility</button>
     <div>
       Password Strength: <span id="result"></span>
